<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_request"
        android:name="com.test.ui.dashboard.DashboardFragment"
        android:label="@string/title_request"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bag"
        android:name="com.test.ui.notifications.NotificationsFragment"
        android:label="@string/title_bag"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.test.ui.notifications.NotificationsFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.test.ui.notifications.NotificationsFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_notifications" />
</navigation>